<?xml version="1.0" encoding="utf-8"?>
<!--Copyright (c) 2019 ASKEY Computer Corp. and/or its affiliates. All rights reserved.-->
<!--Created by Oliver ou on 2019/10/30-->
<!--Description: Voice or video communication function-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    tools:context=".ui.activity.voicecall.LaunchVoiceCallActivity">
    <View
        android:id="@+id/custom_status_bar_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>
<ImageView
    android:id="@+id/activity_start_voice_img"
    android:layout_width="@dimen/dp_128"
    android:layout_height="@dimen/dp_128"
    android:layout_marginTop="@dimen/dp_90"
    android:src="@drawable/default_head"
    app:layout_constraintTop_toBottomOf="@+id/custom_status_bar_background"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
    android:id="@+id/activity_start_voice_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:text="name"
    android:textSize="@dimen/sp_32"
    android:textColor="@color/color_white"
    android:layout_marginTop="@dimen/dp_12"
    app:layout_constraintTop_toBottomOf="@id/activity_start_voice_img"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/activity_start_voice_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_start_vioce_invite"
        android:textColor="@color/color_white"
        android:layout_marginTop="@dimen/dp_12"
        app:layout_constraintTop_toBottomOf="@id/activity_start_voice_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/start_voice_in_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/activity_start_voice_text"
        app:layout_constraintBottom_toBottomOf="@+id/activity_start_voice_call"
        android:text="@string/IntranetChatApplication_onInCall_toast_text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp_20"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/activity_start_voice_call"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:src="@drawable/ic_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/dp_120"/>
    <TextView
        android:id="@+id/activity_start_voice_text_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cancel"
        android:textColor="@color/color_white"
        android:layout_marginTop="@dimen/dp_12"
        app:layout_constraintTop_toBottomOf="@id/activity_start_voice_call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>