<?xml version="1.0" encoding="utf-8"?>
<!--Copyright (c) 2019 ASKEY Computer Corp. and/or its affiliates. All rights reserved.-->
<!--Created by Oliver ou on 2019/10/30-->
<!--Description: Voice or video communication function-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    tools:mContext=".ui.activity.voicecall.AnswerVoiceCallActivity">
    <View
        android:id="@+id/custom_status_bar_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/answer_voice_phone_img"
        android:layout_width="@dimen/dp_128"
        android:layout_height="@dimen/dp_128"
        android:layout_marginTop="@dimen/dp_96"
        android:src="@drawable/default_head"
        app:layout_constraintTop_toBottomOf="@+id/custom_status_bar_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/answer_voice_phone_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_32"
        android:textColor="@color/color_white"
        android:layout_marginTop="@dimen/dp_12"
        app:layout_constraintTop_toBottomOf="@id/answer_voice_phone_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/answer_voice_phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_answer_vioce_invite"
        android:textColor="@color/color_white"
        android:layout_marginTop="@dimen/dp_12"
        app:layout_constraintTop_toBottomOf="@id/answer_voice_phone_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/answer_voice_phone_cancel"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_marginStart="@dimen/dp_64"
        android:layout_marginBottom="@dimen/dp_120"
        android:src="@drawable/ic_phone_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/answer_vioce_text_phone_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_white"
        android:text="@string/text_on_vioce_call_cancel"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_12"
        app:layout_constraintTop_toBottomOf="@id/answer_voice_phone_cancel"
        app:layout_constraintEnd_toEndOf="@id/answer_voice_phone_cancel"/>

    <ImageView
        android:id="@+id/answer_voice_phone_accept"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_marginEnd="@dimen/dp_64"
        android:layout_marginBottom="@dimen/dp_120"
        android:src="@drawable/ic_phone"
        android:tint="@color/color_green_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/answer_vioce_text_phone_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_white"
        android:text="@string/text_answer_vioce_call_accept"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_12"
        app:layout_constraintTop_toBottomOf="@id/answer_voice_phone_accept"
        app:layout_constraintEnd_toEndOf="@id/answer_voice_phone_accept"/>
</androidx.constraintlayout.widget.ConstraintLayout>