<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.chatroom.TransmitActivity">
    <View
        android:id="@+id/custom_status_bar_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

<!--    title-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/transmit_title"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:paddingStart="@dimen/dp_15"
        android:background="@drawable/custom_gradient_main_title">

        <TextView
            android:id="@+id/close_transmit"
            android:layout_width="@dimen/dp_60"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/close_transmit"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/color_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/transmit_to"
            android:textSize="@dimen/sp_22"
            android:textColor="@color/color_white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    搜索框-->
    <LinearLayout
        android:id="@+id/transmit_search_input_box"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_transmit_search"
            android:padding="@dimen/dp_5"
            android:paddingStart="@dimen/dp_10">
            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_30"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_search"/>

            <EditText
                android:id="@+id/transmit_search"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="@dimen/sp_18"
                android:hint="@string/search"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_5"/>

            <ImageView
                android:id="@+id/transmit_clear_search_content"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_30"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_cancel"/>
        </LinearLayout>

        <TextView
            android:id="@+id/transmit_cancel_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/text_cancel"
            android:layout_marginStart="@dimen/dp_10"
            android:textColor="@color/color_blue"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/transmit_scroll"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
<!--            搜索-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/transmit_search_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_15"
                android:background="@drawable/bg_transmit_search">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:padding="@dimen/dp_10">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_search"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search"
                        android:textColor="@color/color_gray_dark"
                        android:textSize="@dimen/sp_19"
                        android:layout_marginStart="@dimen/dp_5"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_8"
                android:background="@color/color_gray"
                android:layout_marginBottom="@dimen/dp_5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="最近"
                android:textSize="@dimen/sp_20"
                android:paddingStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_10"/>

            <LinearLayout
                android:id="@+id/transmit_recently_chat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="@dimen/dp_15"
                android:orientation="vertical"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/transmit_search_result_box"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/transmit_search_result_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/transmit_no_more_result"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_more_result"
            android:textSize="@dimen/sp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>